# PSL-Translator

./: .gitignore  LSTM_model.pth  README.md  app_main.py  data.dvc  dataloader.py  hyperparameter_tuning.py  inference.py  labels_model_v1.json  main.py  model.py  model_LSTM.py  model_conv_LSTM.py  model_transformer.py  pyproject.toml  requirements.txt  test.py  training.py  training_history.json  wtf.py  wtf2.py
.dvc/: config
.test-venv/: pyvenv.cfg
.test-venv/Scripts/: activate  (+1 more)
app/: LSTM_RGB_more_copy_2_RTMP_.pth  labels.json  main.py  main_window.py  model_LSTM_transformer.py
data_collection/: actions.py  data_collection.py  helpers.py  preprocessing,py  reindex_samples.py  resize_images.py
data_prep/: datasets.py  landmark_extraction.py  optical_flow_extraction.py  show_optical_flow.py  test.py  transforms.py
dvc_module/: data_collection.py  data_upload.py  dvc.py  helpers.py  reindex_samples.py  resize_images.py
models/: LSTM.md  base_model_fixed_input_shape.pth  lstm_model.pth  model_DLSTM.py  model_GRU.py  model_LSTM.py  model_LSTM_transformer.py  model_LSTM_transformer_2.py  model_conv_LSTM.py  model_forecaster.py  model_pseudo_conv_LSTM.py  transformer_model_without_transforms.pth  tree.py
preprocessing/: datasets.py  optical_flow_extraction.py  test.py  transforms.py
scripts/: annotations.csv  jester_organisation.py  main_tf.py
scripts_tf/: data_preprocessing.py
training/: training_history.json  transformer_model.pth  transformers_pytorch.ipynb
translation/: evaluator.py  gec_dataloader.py  translation_dataloader.py  translator.py
(+54515 files in other folders)
